@@ -1,5 +1,11 @@
 2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
 
+	* src/bookmarks/ephy-bookmarks-menu.c
+	
+	Added the 'Local' topic to bookmarks menu.
+
+2006-01-17  Peter Harvey  <peter.a.harvey@gmail.com>
+
 	* src/bookmarks/Makefile.am
 	
 	Forgotten Makefile changes.
